# primevox

./: .gitignore  .pre-commit-config.yaml  LICENSE  PrimeVox_analysis.md  README.md  historical_data.json  main.py  pyproject.toml  sdk_analysis.md  tests_analysis.md
.github/workflows/: ci.yml
pv_sdk/: analysis.py  coloring.py  documentation.py  factoring.py  historical_analysis.py  prime.py  prime_vowel_factorizer.py  twin_primes.py  visualization.py
tests/: test_analysis.py  test_factoring.py  test_prime.py  test_visualization.py
