[project]
name = "primevox"
version = "0.1.0"
description = "primevox is a Python SDK for analyzing prime number properties, twin primes, prime gaps, factoring composite numbers, and implementing efficient number-theoretic algorithms."
authors = [
    { name = "MikeLawrenchuk", email = "25318794+MikeLawrenchuk@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.poetry]
packages = [{ include = "pv_sdk" }]
package-mode = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

