[tool.poetry]
name = "PrimeVox"
version = "0.1.0"
description = "An SDK and analysis toolkit for prime numbers and vowel mappings."
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
