[tool.poetry]
name = "primevox"
version = "0.1.0"
description = "A Python SDK for analyzing prime numbers, twin primes, prime gaps, and composite number factorization, emphasizing algorithmic efficiency."
authors = ["Mike Lawrenchuk <25318794+MikeLawrenchuk@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MikeLawrenchuk/primevox"
keywords = [
    "prime numbers",
    "number theory",
    "twin primes",
    "factorization",
    "mathematics",
    "algorithms",
    "computational mathematics"
]

packages = [{ include = "pv_sdk" }]


[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
markdown = "^3.7"
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.3.1"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

